--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,8 @@
     "Key": "your-very-strong-secret-key-here",
     "Issuer": "your-api",
     "Audience": "your-api-users"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:bookshelf.database.windows.net,1433;Initial Catalog=bookshelfDB;Persist Security Info=False;User ID=CloudSAcd4bbd3f;Password=Francesca97@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
